Adding higher logger error

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 LANG=C.UTF-8
 
+# https://docs.djangoproject.com/en/2.0/ref/settings/#std:setting-SECRET_KEY
 SECRET_KEY=afddnzczb^tmq9pf9sst6k((4&4h-6)h+_6ku(ww%!hkrsjp5i
-HOST_NAME=.radioco.org
+# https://docs.djangoproject.com/en/2.0/ref/settings/#allowed-hosts
+ALLOWED_HOSTS=.radioco.org
 
 PORT_BACKEND=8000
