--- a/backend/radioco/pages/views/index/timeline.yml
+++ b/backend/radioco/pages/views/index/timeline.yml
@@ -6,7 +6,7 @@ translatable_fields:
   - place
 items:
   - title: Annual conference of Federal Association of Free Radios
-    image: 21_10_2016_stefan.png
+    image: 21_10_2016_stefan.avif
 #    date: 2016/10/21
     place: 21/10/2016 - Germany
     location: Germany, Halle (Saale)
@@ -19,7 +19,7 @@ items:
         icon: fas fa-volume-up
         url: http://www.community-media.net/programmplanung-und-darstellung-mit-radioco/
   - title: Escola de Verán de CUAC FM
-    image: 15_07_2016_iago_chema.png
+    image: 15_07_2016_iago_chema.avif
     place: 15/07/2016 - Spain
     location: Spain, A Coruña
     speakers: Iago Veloso / José María Casanova
@@ -43,13 +43,13 @@ items:
         icon: far fa-file-pdf
         url: /campamento_veran_cuac.pdf
   - title: Segundo Encuentro Europeo de Medios Comunitarios
-    image: 12_03_2016_raspberry.png
+    image: 12_03_2016_raspberry.avif
     place: 12/03/2016 - Spain
     location: Spain, Madrid
     speakers: José María Casanova / Álex Cortiñas
     resources: []
   - title: Xornada de Ondas Libres e Comunitarias
-    image: 23_01_2016_kalimera_isa_alex.png
+    image: 23_01_2016_kalimera_isa_alex.avif
     place: 23/01/2016 - Spain
     location: Spain, Santiago de Compostela
     speakers: Álex Cortiñas / Isabel Lema Blanco
@@ -61,7 +61,7 @@ items:
         icon: far fa-file-pdf
         url: https://cuacfm.org/wp-content/uploads/2016/02/Kalimera-2015-g.pdf
   - title: Xornada de Boas Prácticas de Software Libre para ONGs
-    image: 22_10_2015_isa_chema.png
+    image: 22_10_2015_isa_chema.avif
     place: 22/10/2015 - Spain
     location: Spain, Santiago de Compostela
     speakers: Isabel Lema Blanco / José María Casanova Crespo
@@ -73,7 +73,7 @@ items:
         icon: fab fa-youtube
         url: https://www.youtube.com/watch?v=gADKGwaHqC0
   - title: Radio Archives in European Community Media
-    image: 05_06_2015_captcha2.png
+    image: 05_06_2015_captcha2.avif
     place: 05/06/2015 - Germany
     location: Germany, Halle (Saale)
     speakers: Jose Maria Casanova / Fernando Souto
@@ -85,7 +85,7 @@ items:
         icon: far fa-file-pdf
         url: https://cuacfm.org/wp-content/uploads/2015/06/CAPTCHA-2015-Livingarchives-From-manual-analogical-recording-to-RadioCo.pdf
   - title: 14th edition of Technological Projects
-    image: 02_12_2014_iago.png
+    image: 02_12_2014_iago.avif
     place: 02/12/2014 - Spain, Ourense
     location: Spain, Ourense
     speakers: Iago Veloso
@@ -97,7 +97,7 @@ items:
         icon: far fa-file-pdf
         url: /presentacion-expourense.pdf
   - title: VII edition of Best Final Project with Free Software
-    image: 17_10_2014_iago.png
+    image: 17_10_2014_iago.avif
     place: 17/10/2014 - Spain
     location: Spain, Santiago de Compostela
     speakers: Iago Veloso
@@ -109,7 +109,7 @@ items:
         icon: far fa-file-pdf
         url: /mancomun_radioco.pdf
   - title: Project exposition
-    image: 15_09_2014_fic.png
+    image: 15_09_2014_fic.avif
     place: 15/09/2014 - Spain
     location: Spain, A Coruña
     speakers: Iago Veloso
@@ -125,7 +125,7 @@ items:
         icon: far fa-file-pdf
         url: /presentacion_tfg.pdf
   - title: Encuentro 14
-    image: 13_04_2014_encuentro14.png
+    image: 13_04_2014_encuentro14.avif
     place: 13/04/2014 - Spain
     location: Spain, A Coruña
     speakers: Iago Veloso
