--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.6"
 pyyaml = "^6.0.2"
 django-cors-headers = "^4.3.1"
 whitenoise = {version = "^6.6.0", extras = ["brotli"]}
+django-compressor = "^4.4"
 
 
 [build-system]
