--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ pyyaml = "^6.0.2"
 django-cors-headers = "^4.7.0"
 whitenoise = {version = "^6.6.0", extras = ["brotli"]}
 django-compressor = "^4.4"
-
+gunicorn = "^23.0.0"
 
 [build-system]
 requires = ["poetry-core"]
